# MultiMC5

./: .gitignore  .travis.yml  CMakeLists.txt
api/gui/: CMakeLists.txt
api/logic/: BaseInstance.cpp  BaseInstance.h  BaseInstanceProvider.h  CMakeLists.txt  Env.cpp  Env.h  FolderInstanceProvider.cpp  FolderInstanceProvider.h  InstanceList.cpp  InstanceList.h  Json.h  MMCZip.cpp  MMCZip.h  NullInstance.h
api/logic/auth/: BaseAuthSession.h
api/logic/java/: JavaInstallList.cpp
api/logic/java/launch/: CheckJava.h
api/logic/launch/: LaunchStep.h  LoggedProcess.h
api/logic/launch/steps/: PostLaunchCommand.h  PreLaunchCommand.h  Update.h
api/logic/minecraft/forge/: ForgeInstaller.h
api/logic/minecraft/liteloader/: LiteLoaderInstaller.h
api/logic/net/: Mirror.cpp  Mirror.h  Mirror_test.cpp  URLConstants.h
api/minecraft/: CMakeLists.txt  GradleSpecifier_test.cpp  Library.cpp  Library.h  Library_test.cpp  MinecraftInstance.cpp  MinecraftInstance.h  MinecraftProfile.cpp  MinecraftProfile.h  MinecraftVersion.cpp  MinecraftVersion.h  MinecraftVersionList.h  ModList.h  ModList_test.cpp  MojangVersionFormat.h  MojangVersionFormat_test.cpp  ParseUtils.h  ParseUtils_test.cpp  ProfileUtils.cpp  SkinUpload.cpp  SkinUpload.h  VersionFile.cpp  VersionFile.h  VersionFilterData.h  World.h  WorldList.h
api/minecraft/auth/: AuthSession.cpp  AuthSession.h  MojangAccount.cpp  MojangAccount.h  MojangAccountList.h
api/minecraft/auth/flows/: AuthenticateTask.cpp  RefreshTask.cpp
api/minecraft/forge/: ForgeInstaller.cpp  ForgeInstaller.h  ForgeVersion.cpp  ForgeVersionList.h  LegacyForge.h
api/minecraft/ftb/: FTBInstanceProvider.cpp  FTBInstanceProvider.h  FTBProfileStrategy.cpp  FTBProfileStrategy.h  FTBVersion.h  LegacyFTBInstance.h  OneSixFTBInstance.cpp  OneSixFTBInstance.h
api/minecraft/launch/: CreateServerResourcePacksFolder.cpp  CreateServerResourcePacksFolder.h  DirectJavaLaunch.cpp  DirectJavaLaunch.h  ExtractNatives.cpp  ExtractNatives.h  LauncherPartLaunch.cpp  LauncherPartLaunch.h  PrintInstanceInfo.cpp  PrintInstanceInfo.h
api/minecraft/legacy/: LegacyInstance.cpp  LegacyInstance.h  LegacyModList.h  LegacyUpdate.cpp  LegacyUpdate.h  LwjglVersionList.h
api/minecraft/liteloader/: LiteLoaderInstaller.cpp  LiteLoaderInstaller.h  LiteLoaderVersionList.cpp  LiteLoaderVersionList.h
api/minecraft/onesix/: BaseInstaller.cpp  BaseInstaller.h  OneSixInstance.cpp  OneSixInstance.h  OneSixProfileStrategy.cpp  OneSixUpdate.cpp  OneSixUpdate.h  OneSixVersionFormat.cpp  OneSixVersionFormat.h
api/minecraft/onesix/update/: AssetUpdateTask.cpp  FMLLibrariesTask.cpp  FoldersTask.cpp  LibrariesTask.cpp
api/minecraft/tools/: MCEditTool.cpp  MCEditTool.h
api/minecraft/wonko/: BaseWonkoEntity.cpp  BaseWonkoEntity.h  Wonko.cpp  Wonko.h  WonkoIndex.cpp  WonkoIndex.h  WonkoIndex_test.cpp  WonkoReference.h  WonkoUtil.cpp  WonkoUtil.h  WonkoVersion.cpp  WonkoVersion.h  WonkoVersionList.cpp  WonkoVersionList.h
api/minecraft/wonko/format/: WonkoFormat.cpp  WonkoFormat.h  WonkoFormatV1.cpp  WonkoFormatV1.h
api/minecraft/wonko/tasks/: BaseWonkoEntityLocalLoadTask.cpp  BaseWonkoEntityLocalLoadTask.h  BaseWonkoEntityRemoteLoadTask.cpp  BaseWonkoEntityRemoteLoadTask.h
application/: CMakeLists.txt  InstancePageProvider.h  LaunchController.cpp  LaunchInteraction.cpp  LaunchInteraction.h  MainWindow.cpp  MainWindow.h  MultiMC.cpp  MultiMC.h  WonkoGui.cpp  WonkoGui.h  main.cpp
application/dialogs/: AccountLoginDialog.cpp  AccountsDialog.cpp  LoginDialog.cpp  LoginDialog.h  ModEditDialogCommon.h  NewInstanceDialog.cpp  NewInstanceDialog.h  NewInstanceDialog.ui  ProfileSelectDialog.h  QMLDialog.cpp  QMLDialog.h  SkinUploadDialog.cpp  SkinUploadDialog.h  TechnicDialog.cpp  TechnicDialog.h
application/pages/: CoreModFolderPage.cpp  CoreModFolderPage.h  LegacyJarModPage.cpp  LegacyUpgradePage.cpp  LegacyUpgradePage.h  ModFolderPage.cpp  ModFolderPage.h  VersionPage.cpp  VersionPage.h  WorldListPage.cpp  WorldListPage.h
application/pages/global/: AccountListPage.cpp  AccountListPage.h  WonkoPage.cpp
application/resources/multimc/: multimc.qrc
application/technic/: ImageProvider.cpp
application/widgets/: AccountsWidget.cpp  AccountsWidget.h  AccountsWidget.ui  MCModInfoFrame.h  ProgressWidget.cpp
logic/: BaseConfigObject.h  BaseInstance.h  CMakeLists.txt  Env.cpp  Env.h  InstanceList.cpp  Json.cpp  Json.h  NullInstance.h
logic/auth/: AccountFileFormat.h  AccountModel.cpp  AccountModel.h  AccountStore.cpp  AccountStore.h  AccountTypesModel.cpp  AccountTypesModel.h  AuthElement.h  BaseAccount.cpp  BaseAccount.h  BaseAccountType.cpp  BaseAccountType.h  BaseProfile.cpp  BaseProfile.h  BaseSession.h
logic/forge/: ForgeVersionList.cpp
logic/ftb/: FTBPlugin.cpp
logic/icons/: IconList.h
logic/import/: BaseImportProvider.cpp  BaseImportProvider.h  FTBImportProvider.cpp  FTBImportProvider.h  ImportProviderModel.cpp  ImportProviderModel.h  LegacyImportProvider.cpp  LegacyImportProvider.h
logic/minecraft/: LegacyInstance.cpp  LegacyInstance.h  LegacyUpdate.h  MinecraftInstance.cpp  MinecraftInstance.h  MinecraftVersionList.cpp  OneSixInstance.cpp  OneSixInstance.h  OneSixProfileStrategy.cpp  OneSixUpdate.h
logic/minecraft/auth/: MojangAccount.cpp  MojangAccount.h  MojangAuthSession.h  MojangSessionUtils.cpp  MojangSessionUtils.h
logic/net/: ByteArrayDownload.cpp  ByteArrayDownload.h
logic/resources/: ResourceProxyModel.h
logic/technic/: PackModel.cpp  PackModel.h  SolderInstance.cpp  SolderInstance.h  SolderProfileStrategy.cpp  SolderProfileStrategy.h  SolderUpdate.cpp  SolderUpdate.h  SolderVersion.cpp  SolderVersion.h
logic/wonko/: WonkoIndex.cpp  WonkoIndex.h
tests/: CMakeLists.txt  TestUtil.h
tests/data/: accounts_v3.json
tests/logic/auth/: tst_AccountModel.cpp  tst_AccountStore.cpp
tests/logic/minecraft/auth/: tst_MojangAccount.cpp  tst_MojangSessionUtils.cpp
tests/logic/minecraft/auth/tasks/: tst_AuthenticateTask.cpp  tst_RefreshTask.cpp
tests/logic/updater/: tst_UpdateChecker.cpp
wonkoclient/: CMakeLists.txt  WonkoClient.cpp
(+10 files in other folders)
